Ajustes para o PW

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>PW advocacia</title>
+        <title>W2B Law</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -22,7 +22,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#home">PW Advocacia</a>
+                <a class="navbar-brand" href="#home">W2B Law</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -40,10 +40,11 @@
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center">
                     <div class="col-lg-8 align-self-center">
                         <h1 class="text-white font-weight-bold">
-                           PW Advocacia
+                           W2B Law
                         </h1>
                         <div class="description">
-                            Dr. especialista na arte da mentira
+                            <p>Se sua vida já é digital, seu escritório de advocacia também deve ser.</p>
+                            <p>Usamos a tecnologia para evitar problemas e salvar seu tempo e seu dinheiro.</p>
                         </div>
                     </div>
                 </div>
@@ -95,7 +96,7 @@
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8 text-center">
                         <h2 class="mt-0">Quem sou</h2>
-                        <hr class="divider divider-light" />
+                        <hr class="divider" />
                     </div>
                 </div>
 
@@ -133,7 +134,7 @@
         <section class="page-section bg-primary" id="atuacao">
             <div class="container px-4 px-lg-5">
                 <h2 class="text-white text-center mt-0">Áreas de Atuação</h2>
-                <hr class="divider" />
+                <hr class="divider divider-light" />
                 <div class="row gx-4 gx-lg-5">
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
@@ -171,17 +172,17 @@
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <i class="bi bi-envelope fs-3"></i>
-                        <a href="mailto:pwadvocacia@hotmail.com">pwadvocacia@hotmail.com</a>
+                        <a href="mailto:contado@w2blaw.com.br" class="contact-link">contado@w2blaw.com.br</a>
                     </div>
 
                     <div class="col-12 col-md-4">
                         <i class="bi bi-whatsapp fs-3"></i>
-                        <a href="tel:+555ixxxxxxxx">(51) 9xxxx-xxxx</a>
+                        <a href="tel:+555199399-3643" class="contact-link">(51) 99399-3643</a>
                     </div>                    
                  
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-4 text-dark">
                         <i class="bi bi-instagram fs-3"></i>
-                        <a href="https://www.instagram.com/xxx/">@xxx</a>
+                        <a target="_blank" href="https://www.instagram.com/w2blaw/" class="contact-link">@w2blaw</a>
                     </div>
                 </div>
             </div>
@@ -191,13 +192,12 @@
         <footer class="bg-dark text-white y-4">
             <div class="me-5">
                 <p class="text-center small">
-                    Desenvolvido por edu_souza96
-                    <!-- Desenvolvido por sist it -->
+                    Desenvolvido por NerdumIT
                 </p>
             </div>
         </footer>
         <a 
-            href="https://wa.me/5551981882850?text=Ola%20gostaria%20marcar%20uma%20consultoria" 
+            href="https://wa.me/555199399-3643?text=Ola%20gostaria%20marcar%20uma%20consultoria" 
             class="whatsapp-float" 
             target="_blank"
         >
