--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="author" content="" />
         <title>W2B Law</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/icons/w2b.ico" />
         <!-- Bootstrap Icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -21,7 +21,7 @@
         <!-- SimpleLightbox plugin CSS-->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css?v=3" rel="stylesheet" />
+        <link href="css/styles.css?v=4" rel="stylesheet" />
     </head>
     <body id="home">
         <!-- Google Tag Manager (noscript) -->
