--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <link rel="canonical" href="https://www.w2blaw.com.br">
 
         <meta property="og:url" content="https://www.w2blaw.com.br">
-        <meta property="og:title" content="W2b Law">
+        <meta property="og:title" content="W2B Law">
         <meta property="og:description" content="Se sua vida já é digital, seu escritório de advocacia também deve ser. Usamos a tecnologia para evitar problemas, salvando seu tempo e seu dinheiro.">
         <meta property="og:image" content="https://w2blaw.com.br/assets/img/w2b.png">
         <meta property="og:type" content="website"/>
-        <meta property="og:site_name" content="W2b Law"/>
+        <meta property="og:site_name" content="W2B Law"/>
         <meta property="fb:admins" content="w2blaw"/>
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:url" content="https://www.w2blaw.com.br">
-        <meta name="twitter:title" content="W2b Law">
+        <meta name="twitter:title" content="W2B Law">
         <meta name="twitter:description" content="Se sua vida já é digital, seu escritório de advocacia também deve ser. Usamos a tecnologia para evitar problemas, salvando seu tempo e seu dinheiro.">
         <meta name="twitter:image" content="https://w2blaw.com.br/assets/img/w2b.png">
 
